[package]
name = "minetest-worldmapper"
version = "0.2.2"
edition = "2021"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
repository = "https://github.com/UgnilJoZ/minetest-worldmapper"
license = "AGPL-3.0"
description = "Minetest world mapper"


[dependencies]
minetestworld = { version = "0.3", features = ["redis"] }
async-std = "1"
futures = "0.3"
clap = {version = "3.1.0", features = ["derive"]}
image = {version = "0.24", default-features = false}
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"

[features]
default = ["png", "bmp"]
bmp = ["image/bmp"]
png = ["image/png"]
jpeg = ["image/jpeg_rayon"]
avif = ["image/avif"]

[profile.release]
lto = true
opt-level = 3
strip = true
