[package]
name = "minetest-worldmapper"
version = "0.3.2"
edition = "2021"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
repository = "https://github.com/UgnilJoZ/minetest-worldmapper"
license = "AGPL-3.0"
description = "Minetest world mapper"


[dependencies]
minetestworld = "0.5.2"
async-std = "1"
futures = "0.3"
clap = {version = "4.1.1", features = ["derive"]}
image = {version = "0.24", default-features = false}
toml = "0.7"
serde_derive = "1.0"
serde = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
log_err = "1.1"
thiserror = "1.0"

[features]
default = ["png", "bmp"]
bmp = ["image/bmp"]
png = ["image/png"]
jpeg = ["image/jpeg_rayon"]
avif = ["image/avif"]

[profile.release]
lto = true
opt-level = 3
strip = true
