[package]
name = "minetest-worldmapper"
version = "0.3.5"
edition = "2021"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
repository = "https://github.com/UgnilJoZ/minetest-worldmapper"
license = "AGPL-3.0"
description = "Minetest world mapper"


[dependencies]
minetestworld = "0.6.0"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "fs", "macros"] }
futures = "0.3"
clap = {version = "4.5.41", features = ["derive"]}
image = {version = "0.25", default-features = false}
toml = "0.9.2"
serde_derive = "1.0"
serde = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
log_err = "1.1"
thiserror = "2"

[features]
default = ["png", "bmp"]
bmp = ["image/bmp"]
png = ["image/png"]
jpeg = ["image/jpeg"]
avif = ["image/avif"]

[profile.release]
lto = true
opt-level = 3
strip = true
